# similar-images

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  PLAN.md  README.md  build_executable.py  pyproject.toml  run_similar_images.py
src/similar_images/: classifier.py  cli.py  features.py  gui.py  io.py  models.py  report.py  similarity.py
