[project]
name = "similar-images"
version = "0.1.0"
description = "CLI tool to find and classify similar images in a folder"
readme = "README.md"
authors = [
    { name = "renierr", email = "renierr@users.noreply.github.com" }
]
requires-python = ">=3.10,<4"
dependencies = [
    "customtkinter>=5.2.2",
    "numpy>=2.2.6",
    "opencv-python-headless>=4.13.0.92",
    "pillow>=12.2.0",
    "pyinstaller>=6.14.0",
    "rich>=15.0.0",
    "typer>=0.25.1",
]

[project.scripts]
similar-images = "similar_images.cli:main"
similar-images-gui = "similar_images.gui:main"

[project.optional-dependencies]
splash = [
    "pyinstaller>=6.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
